[package]
name = "one-brc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "create_measurements"
path = "src/bin/create_measurements/main.rs"

[dependencies]
mimalloc = "0.1.39"
rand = "0.8.5"
rand_distr = "0.4.3"
tikv-jemallocator = "0.5.4"

[profile.release]
codegen-units = 1
lto = 'fat'
opt-level = 3
panic = "abort"
strip = "symbols"