[package]
name = "one-brc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "create_measurements"
path = "src/bin/create_measurements/main.rs"

[dependencies]
crossbeam-channel = "0.5.12"
fxhash = "0.2.1"
itertools = "0.12.1"
mimalloc = "0.1.39"

[profile.release]
codegen-units = 1
lto = 'fat'
opt-level = 3
panic = "abort"
strip = "symbols"
